[tool.poetry]
name = "rmenai-blueprints/pycord"
version = "0.1.0"
description = "My Pycord template"
authors = ["rmenai <rami.menai@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiodns = "^3.0.0"
arrow = "^1.2.1"
py-cord = "^2.0.0b4"
pydantic = "^1.9.1"
taskipy = "^1.10.2"

[tool.poetry.dev-dependencies]
colorlog = "^6.5.0"
coverage = "^6.4.1"
flake8 = "^4.0.1"
flake8-annotations = "^2.6.2"
flake8-bugbear = "^22.4.25"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.1.1"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.4.1"
flake8-todo = "^0.7"
pep8-naming = "^0.12.1"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "python -m bot"
test = "coverage run -m pytest tests/"
report = "coverage report"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
